changes in vignette to fit UI changes

--- a/README.Rmd
+++ b/README.Rmd
@@ -108,6 +108,6 @@ ps$trafo = function(x, param_set) {
 }
 ps_smplr = SamplerUnif$new(ps)
 x = ps_smplr$sample(2)
-xst = x$transpose(trafo = TRUE)
+xst = x$transpose()
 xst
 ```
