--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ ps = ParamSet$new(
     ParamInt$new(id = "z", lower = 1, upper = 3),
     ParamDbl$new(id = "x", lower = -10, upper = 10),
     ParamLgl$new(id = "flag"),
-    ParamFct$new(id = "methods", values = c("a","b","c"))
+    ParamFct$new(id = "methods", levels = c("a","b","c"))
   )
 )
 ```
@@ -68,7 +68,7 @@ Properties of the parameters within the ParamSet:
 
 ```{r psprobs}
 ps$ids()
-ps$values
+ps$levels
 ps$nlevels
 ps$is_number
 ps$lower
