--- a/README.Rmd
+++ b/README.Rmd
@@ -9,8 +9,9 @@ Package website: [release](https://paradox.mlr-org.com/) | [dev](https://paradox
 Universal Parameter Space Description and Tools.
 
 <!-- badges: start -->
-[![Build Status](https://img.shields.io/travis/mlr-org/paradox/master?label=Linux&logo=travis&style=flat-square)](https://travis-ci.org/mlr-org/paradox)
+[![R build status](https://github.com/mlr-org/paradox/workflows/R-CMD-check/badge.svg)](https://github.com/mlr-org/paradox/actions)
 [![CRAN](https://www.r-pkg.org/badges/version/paradox)](https://cran.r-project.org/package=paradox)
+[![Cran Checks](https://cranchecks.info/badges/worst/paradox)](https://cran.r-project.org/web/checks/check_results_paradox.html)
 [![codecov](https://codecov.io/gh/mlr-org/paradox/branch/master/graph/badge.svg)](https://codecov.io/gh/mlr-org/paradox)
 [![StackOverflow](https://img.shields.io/badge/stackoverflow-mlr3-orange.svg)](https://stackoverflow.com/questions/tagged/mlr3)
 <!-- badges: end -->
@@ -18,6 +19,7 @@ Universal Parameter Space Description and Tools.
 ```{r setup, include=FALSE}
 set.seed(123)
 knitr::opts_chunk$set(cache = FALSE, collapse = TRUE, comment = "#>")
+options(datatable.print.class = FALSE, datatable.print.keys = FALSE)
 library(paradox)
 ```
 
