--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ Universal Parameter Space Description and Tools.
 
 <!-- badges: start -->
 [![R build status](https://github.com/mlr-org/paradox/workflows/R-CMD-check/badge.svg)](https://github.com/mlr-org/paradox/actions)
-[![CRAN](https://www.r-pkg.org/badges/version/paradox)](https://cran.r-project.org/package=paradox)
+[![CRAN status](https://www.r-pkg.org/badges/version/paradox)](https://CRAN.R-project.org/package=paradox)
 [![Cran Checks](https://cranchecks.info/badges/worst/paradox)](https://cran.r-project.org/web/checks/check_results_paradox.html)
 [![codecov](https://codecov.io/gh/mlr-org/paradox/branch/master/graph/badge.svg)](https://codecov.io/gh/mlr-org/paradox)
 [![StackOverflow](https://img.shields.io/badge/stackoverflow-mlr3-orange.svg)](https://stackoverflow.com/questions/tagged/mlr3)
