--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ Package website: [release](https://paradox.mlr-org.com/) | [dev](https://paradox
 Universal Parameter Space Description and Tools.
 
 <!-- badges: start -->
-[![R CMD Check via {tic}](https://github.com/mlr-org/paradox/workflows/R%20CMD%20Check%20via%20{tic}/badge.svg?branch=master)](https://github.com/mlr-org/paradox/actions)
+[![tic](https://github.com/mlr-org/paradox/workflows/tic/badge.svg?branch=master)](https://github.com/mlr-org/paradox/actions)
 [![CRAN status](https://www.r-pkg.org/badges/version/paradox)](https://CRAN.R-project.org/package=paradox)
 [![Cran Checks](https://cranchecks.info/badges/worst/paradox)](https://cran.r-project.org/web/checks/check_results_paradox.html)
 [![codecov](https://codecov.io/gh/mlr-org/paradox/branch/master/graph/badge.svg)](https://codecov.io/gh/mlr-org/paradox)
