use union of ps instead of psc for tune_ps

--- a/attic/paramset.Rmd
+++ b/attic/paramset.Rmd
@@ -6,7 +6,7 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, comment = "#>")
+knitr::opts_chunk$set(echo = TRUE, comment = "#>", collapse = TRUE)
 devtools::load_all("..")
 library("mlr3")
 library("mlr3pipelines")
