correctly document how PSC is not used any more

--- a/attic/paramset.Rmd
+++ b/attic/paramset.Rmd
@@ -275,11 +275,11 @@ generate_design_random(glrn$param_set$tune_ps, 1)$transpose()
 
 The `ParamSet$values` slot stores the `TuneToken` and uses that to create a tuning `ParamSet` whenever `$tune_ps` is queried. This is done by
 1. Generating a `ParamSet` for each individual value that is set to a `TuneToken`, using the information retrieved from the `TuneToken` (range, factor levels, etc.) and information from the `Param` itself to create the tuning parameter. E.g. `tune()` just clones the `Param`, while `tune(p_fct(...))` needs only the `$id` of the `Param` and does some validity checking.
-2. Putting the individual `ParamSets` gotten like this into a common `ParamSetCollection`. The `ParamSetCollection` is very useful here, because the individual tuning `ParamSets` of the parameters being tuned could be single-parameter or multi-parameter (see the `regularization.factor` example above). The `ParamSetCollection` also makes sure that the individual trafos of individual `ParamSets` are called correctly.
-3. If we are dealing with a `GraphLearner`, then we are are already dealing with a `ParamSetCollection` on the outside (i.e. `glrn$param_set` is a `ParamSetCollection`). It must provide a `$tune_ps` active binding just as `ParamSet`. It just puts together the individual tuning paramsets into a `ParamSetCollection` as well; trafos etc. get handled transparently.
+2. Putting the individual `ParamSets` gotten like this into a common `ParamSet` using a `ps_union()` function. This function goes beyond just collecting the `Param`s, and also collects `$deps` and `$trafo` so that the individual trafos of constituent `ParamSet`s are called correctly. Dependencies of the outer paramset are copied to `$tune_ps`.
+3. If we are dealing with a `GraphLearner`, then we are are already dealing with a `ParamSetCollection` on the outside (i.e. `glrn$param_set` is a `ParamSetCollection`). It must provide a `$tune_ps` active binding just as `ParamSet`. It just puts together the individual tuning paramsets using `ps_union()` as well; trafos etc. get handled transparently.
 
 ## Challenges
 
-* Currently [dependencies on the `Learner`-side are broken](https://github.com/mlr-org/paradox/issues/216), but it should be investigated how they should be handled if we ever get them to work. They should probably be added to the result of `$tune_ps` automatically. A question that remains is how dependencies between `Params` that are in different `ParamSets` in a `ParamSetCollection` should be handled, e.g. when a `PipeOp`'s parameter depends on a `PipeOpBranch`.
+* Currently [dependencies on the `Learner`-side are broken](https://github.com/mlr-org/paradox/issues/216), but it should be investigated how they should be handled if we ever get them to work. They are currently added to the result of `$tune_ps` automatically. A question that remains is how dependencies between `Params` that are in different `ParamSets` in a `ParamSetCollection` should be handled, e.g. when a `PipeOp`'s parameter depends on a `PipeOpBranch`. `ParamSetCollection` currently doesn't support this.
 
 * I am not sure whether `trafo = exp` should be allowed for `p_int`, and rounding should happen automatically. An alternative is to create the `round_exp` function as above.
