--- a/attic/paramset.Rmd
+++ b/attic/paramset.Rmd
@@ -278,6 +278,43 @@ The `ParamSet$values` slot stores the `TuneToken` and uses that to create a tuni
 2. Putting the individual `ParamSets` gotten like this into a common `ParamSet` using a `ps_union()` function. This function goes beyond just collecting the `Param`s, and also collects `$deps` and `$trafo` so that the individual trafos of constituent `ParamSet`s are called correctly. Dependencies of the outer paramset are copied to `$tune_ps`.
 3. If we are dealing with a `GraphLearner`, then we are are already dealing with a `ParamSetCollection` on the outside (i.e. `glrn$param_set` is a `ParamSetCollection`). It must provide a `$tune_ps` active binding just as `ParamSet`. It just puts together the individual tuning paramsets using `ps_union()` as well; trafos etc. get handled transparently.
 
+## Documentation
+
+This is how the new features could be documented.
+
+### `Domain`
+
+A `Domain` object is a representation of a single dimension of a `ParamSet`. `Domain` objects are used to construct `ParamSet`s, either through the `ps()` short form, or through the `ParamSet$tune_ps` mechanism. `Domain` corresponds to a `Param` object, except it does not have an `id`, but it *does* have a `trafo` and it does have dependencies (`requires`). For each of the base `Param` classes (`ParamInt`, `ParamDbl`, `ParamLgl`, `ParamFct`, and `ParamUty`) there is a function constructing a `Domain` object (`p_int`, `p_dbl`, `p_lgl`, `p_fct`, `p_uty`). They each have the same arguments as the corresponding `Param` `$new()` function, except without the `id` argument, and with the following additional parameters:
+
+* **`trafo` :: `function`**. Single argument function performing the transformation of a parameter. When the `Domain` is used to construct a `ParamSet`, this transformation will be applied to the corresponding parameter as part of the `$trafo` function.
+* **`requires` :: `call`**. An expression indicating a requirement for the parameter that will be constructed from this. Can be given as an expression (using `quote()`), or the expression can be entered directly and will be parsed using NSE (see examples). The expression may be of the form `<Param> == <value>` or `<Param> %in% <values>`, which will result in dependencies according to `ParamSet$add_dep(on = "<Param>", cond = CondEqual$new(<value>))` or `ParamSet$add_dep(on = "<Param>", cond = CondAnyOf$new(<values>))`, respectively. The expression may also contain multiple conditions separated by `&&`.
+
+The `p_fct` function admits a `levels` argument that goes beyond the `levels` accepted by `Paramfct$new()`. Instead of a `character` vector, any atomic vector or list, optionally named, may be given. (If the value is not named, the names are inferred using `as.character()` on the values.) The resulting `Domain` will correspond to a range of values given by the names of the `levels` argument with a `trafo` that maps the `character` names to the arbitrary values of the `levels` argument.
+
+Domain objects are representations of parameter ranges that are intermediate objects to be used in short form constructions in `tune()` and `ps()`. Because of their nature, they should not be modified by the user.
+
+### `ps()`
+
+The `ps()` short form constructor uses `Domain` objects to construct `ParamSet`s in a succinct and readable way. The arguments are:
+
+* **`...` :: `Domain` | `Param`**. Named arguments of `Domain` or `Param` objects. The `ParamSet` will be constructed of the given `Param`s, or of `Params`s constructed from the given domains. The names of the arguments will be used as `id` (the `id` of `Param` arguments are ignored).
+* **`.extra.trafo` :: `function(x, ps)`**. Transformation to set the resulting `ParamSet`'s `$trafo` value to. This is in addition to any `trafo` of `Domain` objects given in `...`, and will be run *after* transformations of individual parameters were performed.
+
+### `TuneToken` / `$tune_ps`
+
+A `TuneToken` object can be given to a `ParamSet$values` slot as an alternative to a concrete value. This indicates that the value is not given directly but should be tuned using `mlr3tuning`. If the thus parameterized object is invoked directly, without being wrapped by or given to a tuner, it will give an error.
+
+The tuning range `ParamSet` that is constructed from the `TuneToken` values in a `ParamSet`'s `$values` slot can be accessed through the `ParamSet$tune_ps` active bindng. This is done automatically by tuners if no tuning range is given, but it is also possible to access the `$tune_ps` active binding, modify it further, and give the modified `ParamSet` to a tuning function (or do anything else with it, noone is judging you).
+
+A `TuneToken` represents the range over which the parameter whose `$values` slot it occupies should be tuned over. It can be constructed via the `tune()` function in one of several ways:
+
+* **`tune()`**: Indicates a parameter should be tuned over its entire range. Only applies to finite parameters (i.e. discrete or bounded numeric parameters)
+* **`tune(lower, upper)`**: Indicates a numeric parameter should be tuned in the inclusive interval spanning `lower` to `upper`. Depending on the parameter, integer (if it is a `ParamInt`) or real values (if it is a `ParamDbl`) are used.
+* **`tune(levels)`**: Indicates a parameter should be tuned through the given discrete values. `levels` can be any named or unnamed atomic vector or list (although in the unnamed case it must be possible to construct a corresponding `character` vector with distinct values using `as.character`). 
+* **`tune(<Domain>)`**: The given `Domain` object indicates the range which should be tuned over. The supplied `trafo` function is used for parameter transformation.
+* **`tune(<Param>)`**: The given `Param` object indicates the range which should be tuned over.
+* **`tune(<ParamSet>)`**: The given `ParamSet` is used to tune over a single `Param`. This is useful for cases where a single evaluation-time parameter value (e.g. `ParamUty`) is constructed from multiple tuner-visible parameters (which may not be `ParamUty`). The supplied `ParamSet` should always contain a `$trafo` function, which must always return a named `list` with a single entry with the name of the `Param` that this `TuneToken` object corresponds to.
+
 ## Challenges
 
 * Currently [dependencies on the `Learner`-side are broken](https://github.com/mlr-org/paradox/issues/216), but it should be investigated how they should be handled if we ever get them to work. They are currently added to the result of `$tune_ps` automatically. A question that remains is how dependencies between `Params` that are in different `ParamSets` in a `ParamSetCollection` should be handled, e.g. when a `PipeOp`'s parameter depends on a `PipeOpBranch`. `ParamSetCollection` currently doesn't support this.
