--- a/README.Rmd
+++ b/README.Rmd
@@ -10,10 +10,9 @@ Universal Parameter Space Description and Tools.
 
 <!-- badges: start -->
 [![tic](https://github.com/mlr-org/paradox/workflows/tic/badge.svg?branch=master)](https://github.com/mlr-org/paradox/actions)
-[![CRAN status](https://www.r-pkg.org/badges/version/paradox)](https://CRAN.R-project.org/package=paradox)
-[![Cran Checks](https://cranchecks.info/badges/worst/paradox)](https://cran.r-project.org/web/checks/check_results_paradox.html)
-[![codecov](https://codecov.io/gh/mlr-org/paradox/branch/master/graph/badge.svg)](https://codecov.io/gh/mlr-org/paradox)
+[![CRAN Status](https://www.r-pkg.org/badges/version/paradox)](https://CRAN.R-project.org/package=paradox)
 [![StackOverflow](https://img.shields.io/badge/stackoverflow-mlr3-orange.svg)](https://stackoverflow.com/questions/tagged/mlr3)
+[![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
 <!-- badges: end -->
 
 ```{r setup, include=FALSE}
