--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output: github_document
 
 # paradox
 
-Package website: [release](https://paradox.mlr-org.com/) | [dev](https://paradox.mlr-org.com/dev)
+Package website: [release](https://paradox.mlr-org.com/) | [dev](https://paradox.mlr-org.com/dev/)
 
 Universal Parameter Space Description and Tools.
 
