ci: switch to new workflows

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ Package website: [release](https://paradox.mlr-org.com/) | [dev](https://paradox
 Universal Parameter Space Description and Tools.
 
 <!-- badges: start -->
-[![tic](https://github.com/mlr-org/paradox/workflows/tic/badge.svg?branch=main)](https://github.com/mlr-org/paradox/actions)
+[![r-cmd-check](https://github.com/mlr-org/paradox/actions/workflows/r-cmd-check.yml/badge.svg)](https://github.com/mlr-org/paradox/actions/workflows/r-cmd-check.yml)
 [![CRAN Status](https://www.r-pkg.org/badges/version/paradox)](https://CRAN.R-project.org/package=paradox)
 [![StackOverflow](https://img.shields.io/badge/stackoverflow-mlr3-orange.svg)](https://stackoverflow.com/questions/tagged/mlr3)
 [![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
