--- a/README.Rmd
+++ b/README.Rmd
@@ -117,4 +117,4 @@ xst = x$transpose()
 xst
 ```
 
-Further documentation can be found in the [mlr3book](https://mlr3book.mlr-org.com/05-pipelines.html).
+Further documentation can be found in the [mlr3book](https://mlr3book.mlr-org.com/pipelines.html).
