--- a/README.Rmd
+++ b/README.Rmd
@@ -117,4 +117,5 @@ xst = x$transpose()
 xst
 ```
 
-Further documentation can be found in the [mlr3book](https://mlr3book.mlr-org.com/pipelines.html).
+[mlr3book](https://mlr3book.mlr-org.com/technical.html#paradox).
+
