--- a/README.Rmd
+++ b/README.Rmd
@@ -117,5 +117,5 @@ xst = x$transpose()
 xst
 ```
 
-[mlr3book](https://mlr3book.mlr-org.com/technical.html#paradox).
+Further documentation can be found in the [mlr3book](https://mlr3book.mlr-org.com/technical.html#paradox).
 
